--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,9 +5,11 @@ services:
     build: .
     container_name: skynet_app
     ports:
-      - "80:8000"
+      - "5050:5050"
     volumes:
       - ./instance:/app/instance
     env_file:
       - .env
     restart: always
+    environment:
+      BACKEND_URL=http://web:5050
