--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ Mako==1.3.10
 MarkupSafe==3.0.3
 packaging==25.0
 pillow==12.0.0
+psycopg2-binary==2.9.11
 PyJWT==2.10.1
 python-dotenv==1.0.1
 pytz==2025.2
