--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ env/
 # Ignorar archivo con variables sensibles - VARIABLES DE ENTORNO
 .env
 *.env
+.env.docker
 
 # Ignorar archivos temporales de Python
 __pycache__/
